--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ input[type=sumbit]:hover  {
     border-top: 8px solid #4aaaa5;
 }
 
-bottom{
+bottom  {
     clear:both;
 }
 
@@ -150,21 +150,23 @@ bottom{
   }
 
 @media screen and (max-width: 980px) {
+
 }
 
 @media screen and (max-width: 768px) {
+
 }
 
 @media screen and (max-width: 640px) {
     header { 
+        max-width: 100%;
         position: fixed;
         z-index: 1;
     }
-    .about {
+    
+    .about-me {
         margin-top: 100px;
         min-height: 550px;
     }
-    .portfolio-container {
-        margin-top: 100px;
-        min-height: 900px;
+  
     }
