--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,12 +158,14 @@ bottom  {
 }
 
 @media screen and (max-width: 640px) {
-    header { 
-        max-width: 100%;
+    .sticky { 
+        width: 100%;
+        top: 0;
         position: fixed;
         z-index: 1;
-    }
-    
+        }
+
+
     .about-me {
         margin-top: 100px;
         min-height: 550px;
