--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,28 +147,54 @@ bottom  {
     content: "";
     clear: both;
     display: table;
-  }
+}
 
 @media screen and (max-width: 980px) {
+#container {
+    width: 100%;
+}
+
+.about-me {
+    width: 70%;
+}
+
 
 }
 
 @media screen and (max-width: 768px) {
 
+
 }
 
 @media screen and (max-width: 640px) {
-    .sticky { 
+    header {
+        position: static;
+    }
+
+    h1 {
+        position: static;
+    }
+
+    #container {
         width: 100%;
-        top: 0;
-        position: fixed;
-        z-index: 1;
-        }
+    }
+
+    .container-2 {
+        width: 100%;
+    }
+
+    .content {
+        width: 100%;
+    }
+
+    .images {
+        width: 100%;
+    }
+    
+    h3 {
+        width: max-content;
+
+    }
 
 
-    .about-me {
-        margin-top: 100px;
-        min-height: 550px;
-    }
-  
-    }
+
