--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ bottom  {
 
 @media screen and (max-width: 980px) {
 
-    #container {
+#container {
     width: 100%;
 }
 
@@ -159,20 +159,43 @@ bottom  {
     width: 70%;
 }
 
+.images {
+    width: 100%;
+}
+h3 {
+    width: max-content;
+}
 }
 
 @media screen and (max-width: 768px) {
 
-
+h3 {
+    width: max-content;
+   }
 }
+
 
 @media screen and (max-width: 640px) {
     header {
-        position: static;
+       display: block;
+       width: 100%;
+        /* position: static; */
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
     }
 
     h1 {
         position: static;
+        width: 50%;
+        margin-right: auto;
     }
 
     #container {
