--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,8 @@ h3  {
     position: absolute; bottom: -8px;
     font-size: 25px;
     color: white;
-    background: teal;
-    width: 60%;
+    background: lightgray;
+    width: 40%;
 }
 
 input[type=text], select, textarea  {
